# projekt-bb-g2-huber-starlinger

./: project-proposal.md
Daniel/: README.md  nextSteps.md
docs/: project-proposal.md
max/: .gitignore  Dockerfile  api-documentation.md  current-state.md  docker-compose.yml  pyproject.toml  requirements.txt
max/shared/: public_state.json  rules.json
max/src/uno_api/: __init__.py  api.py  cli.py  engine.py  models.py  storage.py
max/src/uno_api/static/: app.js  index.html  styles.css
max/tests/: test_engine.py
