[project]
name = "uno-local-api"
version = "0.1.0"
description = "Two-player UNO game playable through REST API, CLI, and browser."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
uno-cli = "uno_api.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

